--- a/juego/juego.css
+++ b/juego/juego.css
@@ -75,8 +75,9 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: calc(100% - 50px); /* Ocupa todo menos el espacio para la taskbar */
+    height: 100%; /* <- CORREGIDO */
     padding: 1.5rem;
+    box-sizing: border-box; /* <- AÑADIDO PARA MEJOR CÁLCULO */
 }
 #desktop-icons { 
     display: flex; 
